--- a/style.css
+++ b/style.css
@@ -33,13 +33,14 @@
   }
   
   .menu__item--active {
-    color: #ffffff;
-    background: #2600ff;
+    
+    
     border-radius: 10px;
   }
   
   .menu__item:hover {
-    background: #959595;
+        background: #0000FF;
+
     color: #fff;
     border-radius: 10px;
   }
@@ -250,12 +251,21 @@
       flex-direction: row;
       width: 100%;
       height: 75px;
+       position: fixed;
+      z-index:999;
     }
   
     .menu__item {
       padding: 20px 0;
       margin-left: 20px ;
+      
     }
   }
+
+ @media only screen and (max-width: 600px){
+    .column-example-13{
+      width: 250px;
+    }
+  } 
   
   
